website/lts: fix section on small screens
Make the section header take the whole screen size for device with a
small screen (mobile phones).

--- a/docs/website/css/lts.css
+++ b/docs/website/css/lts.css
@@ -145,6 +145,12 @@
     scroll-margin-top: 20px; /* Offset for jump to anchor */
 }
 
+@media screen and (max-width: 768px) {
+  .br-lts-section-header {
+    width: 100%;
+  }
+}
+
 .br-lts-section-header:hover {
     border: 2px solid var(--br-blue);
     box-shadow: 6px 6px 0 var(--br-blue);
